# Rust-NN

./: .gitignore  Cargo.toml  Readme.md  run.sh
py/: c1.py  c1_test.py  mnist_loader.py  scikit.py
src/: main.rs
src/NN/: c1.rs  c2.rs  c2_conv.rs  c2_mod.rs  c2_mod2.rs  mod.rs
src/util/: c2.rs  data.rs  data_all.rs  data_ext.rs  kernels.rs  manipulation.rs  mod.rs
