[package]
name = "Rust-NN"
version = "0.1.0"
authors = ["Yashodhan Joshi <yash.sumedha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.114",features = ["derive"]}
serde_json = "1.0.0"
ndarray = "0.13.1"
ndarray-npy = "0.5.0"
ndarray-rand = "0.11.0"
rand = "0.7.3"